    "::Delete-Unused" is set to true (defaults to false); aptitude pro-actively
    marks for removal the dependencies of the package marked as automatic and
    not used by other packages; and find_not_orphaned() was modified to only
    have into account installed packages or to-be-installed packages to prevent
    removals.

  * Honour ::Purge-Unused when removing packages (Closes: #724034)

- User visible changes:

  * Make boundaries of sessions in the log file more clear (Closes: #269275)

  * [curses] Avoid marking as auto/non-auto if already set (Closes: #265013)

  * [curses] Print message when starting to perform actions (Closes: #323371)

  * Use uppercase APT:: for apt config vars, for consistency (Closes: #519425)

    Both APT:: and Apt:: (the other common form that we were using) are valid,
    in fact they are case-agnostic.  But for internal consistency and specially
    for consistency with APT documentation (apt.conf), use the uppercase form.
    
    This mostly affects documentation, but also some code and translations.  It
    was substituted automatically in all translations.

- Internal changes:

  * temp.cc: simplify code and messages and reduce the use of boost libs

  * configure.ac: Remove checks for boost/scoped_array.hpp and boost/random.hpp,
    not used anymore -- a few seconds less per compilation

  * In file pkg_ver_item.cc, function pkg_ver_columnizer::setup_column(), the
    switch/case handling for longstate was missing the options added in 2007 for
    APT_HAS_TRIGGERS, present for stageflag case and both cases in
    pkg_columnizer::setup_column() of pkg_columnizer.cc.

    (In other words, it was missing in 1 of these 4 places where it is
    necessary).

  * Disable obsolete checks in configure.ac and preprocessor checks in code for
    APT_HAS_TRIGGERS, APT_HAS_HOMEPAGE and HAVE_DDTP.

    The support for these functionalities has been present in all involved tools