@@ -92,6 +92,9 @@ Version 0.7.3 UNRELEASED
 
   * Honour ::Purge-Unused when removing packages (Closes: #724034)
 
+  * Be more informative when virtual packages are involved in broken deps
+    (Closes: #316633, #798898, #799918)
+
 - User visible changes:
 
   * Make boundaries of sessions in the log file more clear (Closes: #269275)
